feat: complete project

--- a/index.html
+++ b/index.html
@@ -8,8 +8,168 @@
     <link rel="stylesheet" href="./blocks_art6/block_foto-harakteristiki_art6/css/main.css" />
   </head>
   <body>
-    <div class="photo-characteristics">
-      <div class="photo-characteristics__container"></div>
+    <div class="photochar">
+      <div class="photochar__container">
+        <!-- 1 BLOCK -->
+        <div class="photochar__block">
+          <!-- First item of block -->
+          <h3 class="photochar__title photochar__title--left">Бумажные стаканы</h3>
+          <div class="photochar__image photochar__image--left">
+            <picture>
+              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item1.webp" type="image/webp" />
+              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item1.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item1.png" alt="" />
+            </picture>
+          </div>
+          <ul class="photochar__descr photochar__descr--left">
+            <li>Минимальный тираж (шт): <b>2500</b></li>
+            <li>Максимальное кол–во цветов: <b>не ограничено</b></li>
+            <li>Срок изготовления (дней): <b>30</b></li>
+            <li>Клеше (для печати): <b>не требуется</b></li>
+          </ul>
+          <!-- Second item of block -->
+          <h3 class="photochar__title photochar__title--right">Упаковка для еды на вынос</h3>
+          <div class="photochar__image photochar__image--right">
+            <picture>
+              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item2.webp" type="image/webp" />
+              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item2.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item2.png" alt="" />
+            </picture>
+          </div>
+          <ul class="photochar__descr photochar__descr--right">
+            <li>Минимальный тираж (шт): <b>от 10 000</b> (в зависимости от формы)</li>
+            <li>Максимальное кол–во цветов: <b>не ограничено</b></li>
+            <li>Срок изготовления (дней): <b>от 30</b></li>
+            <li>Клеше (для печати): <b>в зависимости от формы</b></li>
+          </ul>
+        </div>
+
+        <!-- 2 BLOCK -->
+        <div class="photochar__block">
+          <!-- First item of block -->
+          <h3 class="photochar__title photochar__title--left">Бумажные пакеты с ручками</h3>
+          <div class="photochar__image photochar__image--left">
+            <picture>
+              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item3.webp" type="image/webp" />
+              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item3.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item3.png" alt="" />
+            </picture>
+          </div>
+          <ul class="photochar__descr photochar__descr--left">
+            <li>Минимальный тираж (шт): <b>500</b></li>
+            <li>Максимальное кол–во цветов: <b>3</b></li>
+            <li>Срок изготовления (дней): <b>21</b></li>
+            <li>Клеше (для печати): <b>не требуется</b></li>
+          </ul>
+          <!-- Second item of block -->
+          <h3 class="photochar__title photochar__title--right">Сахар в стиках</h3>
+          <div class="photochar__image photochar__image--right">
+            <picture>
+              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item4.webp" type="image/webp" />
+              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item4.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item4.png" alt="" />
+            </picture>
+          </div>
+          <ul class="photochar__descr photochar__descr--right">
+            <li>Минимальный тираж (шт): <b>20 000</b></li>
+            <li>Максимальное кол–во цветов: <b>2</b></li>
+            <li>Срок изготовления (дней): <b>30</b></li>
+            <li>Клеше (для печати): <b>необходимо</b></li>
+          </ul>
+        </div>
+
+        <!-- 3 BLOCK -->
+        <div class="photochar__block">
+          <!-- First item of block -->
+          <h3 class="photochar__title photochar__title--left">пакет майка</h3>
+          <div class="photochar__image photochar__image--left">
+            <picture>
+              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item5.webp" type="image/webp" />
+              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item5.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item5.png" alt="" />
+            </picture>
+          </div>
+          <ul class="photochar__descr photochar__descr--left">
+            <li>Минимальный тираж (шт): <b>20 000</b></li>
+            <li>Максимальное кол–во цветов: <b>3</b></li>
+            <li>Срок изготовления (дней): <b>30</b></li>
+            <li>Клеше (для печати): <b>необходимо</b></li>
+          </ul>
+          <!-- Second item of block -->
+          <h3 class="photochar__title photochar__title--right">Бумажные пакеты без ручек, листы, подложки</h3>
+          <div class="photochar__image photochar__image--right">
+            <picture>
+              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item6.webp" type="image/webp" />
+              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item6.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item6.png" alt="" />
+            </picture>
+          </div>
+          <ul class="photochar__descr photochar__descr--right">
+            <li>Минимальный тираж (шт): <b>20 000</b></li>
+            <li>Максимальное кол–во цветов: <b>3</b></li>
+            <li>Срок изготовления (дней): <b>30</b></li>
+            <li>Клеше (для печати): <b>не требуется</b></li>
+          </ul>
+        </div>
+
+        <!-- 4 BLOCK -->
+        <div class="photochar__block">
+          <!-- First item of block -->
+          <h3 class="photochar__title photochar__title--left">Стикеры, наклейки</h3>
+          <div class="photochar__image photochar__image--left">
+            <picture>
+              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item7.webp" type="image/webp" />
+              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item7.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item7.png" alt="" />
+            </picture>
+          </div>
+          <ul class="photochar__descr photochar__descr--left">
+            <li>Минимальный тираж (шт): <b>1000</b></li>
+            <li>Максимальное кол–во цветов: <b>не ограничено</b></li>
+            <li>Срок изготовления (дней): <b>10</b></li>
+            <li>Клеше (для печати): <b>не требуется</b></li>
+          </ul>
+          <!-- Second item of block -->
+          <h3 class="photochar__title photochar__title--right">Палочки для суши</h3>
+          <div class="photochar__image photochar__image--right">
+            <picture>
+              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item8.webp" type="image/webp" />
+              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item8.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item8.png" alt="" />
+            </picture>
+          </div>
+          <ul class="photochar__descr photochar__descr--right">
+            <li>Минимальный тираж (шт): <b>100 00</b></li>
+            <li>Максимальное кол–во цветов: <b>3</b></li>
+            <li>Срок изготовления (дней): <b>60</b></li>
+            <li>Клеше (для печати): <b>необходимо</b></li>
+          </ul>
+        </div>
+
+        <!-- 5 BLOCK -->
+        <div class="photochar__block">
+          <!-- First item of block -->
+          <h3 class="photochar__title photochar__title--left">Стаканы пэт</h3>
+          <div class="photochar__image photochar__image--left">
+            <picture>
+              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item9.webp" type="image/webp" />
+              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item9.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item9.png" alt="" />
+            </picture>
+          </div>
+          <ul class="photochar__descr photochar__descr--left">
+            <li>Минимальный тираж (шт): <b>15 200</b></li>
+            <li>Максимальное кол–во цветов: <b>4</b></li>
+            <li>Срок изготовления (дней): <b>30</b></li>
+            <li>Клеше (для печати): <b>необходимо</b></li>
+          </ul>
+          <!-- Second item of block -->
+          <h3 class="photochar__title photochar__title--right">Салфетки влажные в индивидуальной упаковке</h3>
+          <div class="photochar__image photochar__image--right">
+            <picture>
+              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item10.webp" type="image/webp" />
+              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item10.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item10.png" alt="" />
+            </picture>
+          </div>
+          <ul class="photochar__descr photochar__descr--right">
+            <li>Минимальный тираж (шт): <b>100 000</b></li>
+            <li>Максимальное кол–во цветов: <b>3+1</b> (белый)</li>
+            <li>Срок изготовления (дней): <b>21</b></li>
+            <li>Клеше (для печати): <b>необходимо</b></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
