--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
           <!-- First item of block -->
           <h3 class="photochar__title photochar__title--left">Бумажные стаканы</h3>
           <div class="photochar__image photochar__image--left">
-            <picture>
-              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item1.webp" type="image/webp" />
-              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item1.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item1.png" alt="" />
-            </picture>
+            <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item1.png" alt="" />
           </div>
           <ul class="photochar__descr photochar__descr--left">
             <li>Минимальный тираж (шт): <b>2500</b></li>
@@ -29,10 +26,7 @@
           <!-- Second item of block -->
           <h3 class="photochar__title photochar__title--right">Упаковка для еды на вынос</h3>
           <div class="photochar__image photochar__image--right">
-            <picture>
-              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item2.webp" type="image/webp" />
-              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item2.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item2.png" alt="" />
-            </picture>
+            <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item2.png" alt="" />
           </div>
           <ul class="photochar__descr photochar__descr--right">
             <li>Минимальный тираж (шт): <b>от 10 000</b> (в зависимости от формы)</li>
@@ -47,10 +41,7 @@
           <!-- First item of block -->
           <h3 class="photochar__title photochar__title--left">Бумажные пакеты с ручками</h3>
           <div class="photochar__image photochar__image--left">
-            <picture>
-              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item3.webp" type="image/webp" />
-              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item3.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item3.png" alt="" />
-            </picture>
+            <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item3.png" alt="" />
           </div>
           <ul class="photochar__descr photochar__descr--left">
             <li>Минимальный тираж (шт): <b>500</b></li>
@@ -61,10 +52,7 @@
           <!-- Second item of block -->
           <h3 class="photochar__title photochar__title--right">Сахар в стиках</h3>
           <div class="photochar__image photochar__image--right">
-            <picture>
-              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item4.webp" type="image/webp" />
-              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item4.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item4.png" alt="" />
-            </picture>
+            <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item4.png" alt="" />
           </div>
           <ul class="photochar__descr photochar__descr--right">
             <li>Минимальный тираж (шт): <b>20 000</b></li>
@@ -79,10 +67,7 @@
           <!-- First item of block -->
           <h3 class="photochar__title photochar__title--left">пакет майка</h3>
           <div class="photochar__image photochar__image--left">
-            <picture>
-              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item5.webp" type="image/webp" />
-              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item5.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item5.png" alt="" />
-            </picture>
+            <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item5.png" alt="" />
           </div>
           <ul class="photochar__descr photochar__descr--left">
             <li>Минимальный тираж (шт): <b>20 000</b></li>
@@ -93,10 +78,7 @@
           <!-- Second item of block -->
           <h3 class="photochar__title photochar__title--right">Бумажные пакеты без ручек, листы, подложки</h3>
           <div class="photochar__image photochar__image--right">
-            <picture>
-              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item6.webp" type="image/webp" />
-              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item6.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item6.png" alt="" />
-            </picture>
+            <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item6.png" alt="" />
           </div>
           <ul class="photochar__descr photochar__descr--right">
             <li>Минимальный тираж (шт): <b>20 000</b></li>
@@ -111,10 +93,7 @@
           <!-- First item of block -->
           <h3 class="photochar__title photochar__title--left">Стикеры, наклейки</h3>
           <div class="photochar__image photochar__image--left">
-            <picture>
-              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item7.webp" type="image/webp" />
-              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item7.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item7.png" alt="" />
-            </picture>
+            <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item7.png" alt="" />
           </div>
           <ul class="photochar__descr photochar__descr--left">
             <li>Минимальный тираж (шт): <b>1000</b></li>
@@ -125,10 +104,7 @@
           <!-- Second item of block -->
           <h3 class="photochar__title photochar__title--right">Палочки для суши</h3>
           <div class="photochar__image photochar__image--right">
-            <picture>
-              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item8.webp" type="image/webp" />
-              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item8.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item8.png" alt="" />
-            </picture>
+            <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item8.png" alt="" />
           </div>
           <ul class="photochar__descr photochar__descr--right">
             <li>Минимальный тираж (шт): <b>100 00</b></li>
@@ -143,10 +119,7 @@
           <!-- First item of block -->
           <h3 class="photochar__title photochar__title--left">Стаканы пэт</h3>
           <div class="photochar__image photochar__image--left">
-            <picture>
-              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item9.webp" type="image/webp" />
-              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item9.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item9.png" alt="" />
-            </picture>
+            <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item9.png" alt="" />
           </div>
           <ul class="photochar__descr photochar__descr--left">
             <li>Минимальный тираж (шт): <b>15 200</b></li>
@@ -157,10 +130,7 @@
           <!-- Second item of block -->
           <h3 class="photochar__title photochar__title--right">Салфетки влажные в индивидуальной упаковке</h3>
           <div class="photochar__image photochar__image--right">
-            <picture>
-              <source srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item10.webp" type="image/webp" />
-              <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item10.png" srcset="./blocks_art6/block_foto-harakteristiki_art6/images/item10.png" alt="" />
-            </picture>
+            <img src="./blocks_art6/block_foto-harakteristiki_art6/images/item10.png" alt="" />
           </div>
           <ul class="photochar__descr photochar__descr--right">
             <li>Минимальный тираж (шт): <b>100 000</b></li>
